--- a/config-repo/notification-service.properties
+++ b/config-repo/notification-service.properties
@@ -43,8 +43,8 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 # =============================================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=maghriyassine1@gmail.com
-spring.mail.password=kadm ufoc vbhb qypt
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # spring.mail.properties.mail.smtp.starttls.required=true
